samples/_failures_safe/1761663159_0a8b47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1229e3d2.c: In function ‘main’:
./samples/SAFE/__tmp_1229e3d2.c:161:5: error: expected expression at end of input
  161 |     if (!
      |     ^~
./samples/SAFE/__tmp_1229e3d2.c:161:5: error: expected declaration or statement at end of input
